Fix Card spacing

--- a/css/index.style.css
+++ b/css/index.style.css
@@ -448,7 +448,7 @@ html, body {
     /* position: absolute; */
     font-size: 100px;
     font-weight: 100;
-    margin-bottom: -0.1em;
+    /* margin-bottom: -0.1em; */
     background-color: #FFFFFF;
     z-index: 1;
 }
@@ -464,8 +464,9 @@ html, body {
     padding-left: 10%;
     padding-right: 10%;
     padding-bottom: 10%;
+    gap: 1em;
     column-gap: 5%;
-    row-gap: 0.5%;
+    row-gap: 2%;
     /* background-color: #FFFFFF; */
     /* background-image: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(77,77,77,1) 99%); */
 }
@@ -483,7 +484,7 @@ h1 {
 .Component{
     display: grid;
     place-items: center;
-    margin-bottom: 1em;
+    /* margin-top: -10em; */
 }
 
 .Card-Container{
@@ -492,18 +493,23 @@ h1 {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
     height: 100%;
-    width: 80%;
+    width: auto;
     text-decoration: none;
     filter: var(--shadow-dark);
+    /* background-color: aqua; */
+    /* margin-top: -5em; */
+    
 }
 
 .Card-Image{
     align-self: end;
+    /* align-content: stretch; */
     object-fit: cover;
-    height: 19em;
+    height: 100%;
     width: 100%;
     border-radius: var(--border-rad-sm) var(--border-rad-sm) 0px 0px;
     grid-row: 1 / span 1;
+    /* margin-top: -5em; */
 }
 
 .Card-Title {
